<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Telemedicine Project</string>
    <string name="title_activity_splash_screen" translatable="false">SplashScreen</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="dont_have_an_account" translatable="false">Don\'t have an account?</string>
    <string name="sign_up1" translatable="false">Sign Up!</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="forgot_your_password" translatable="false">Forgot  your Password?</string>
    <string name="create_account" translatable="false">Create Account</string>
    <string name="already_have_an_account" translatable="false">Already have an account?</string>
    <string name="sign_in1" translatable="false">Sign In!</string>
    <string name="user_name" translatable="false">Username</string>
    <string name="phone" translatable="false">Phone</string>
    <string name="confirm_password" translatable="false">Confirm password</string>
    <string name="notification">Notification</string>
    <string name="message_option">Message Option</string>
    <string name="call_option">Call Option</string>
    <string name="video_call_option">Video Call Option</string>
    <string name="search_yout">Search Your</string>
    <string name="specialist">Specialist</string>
    <string name="select_area">Select Area</string>
    <string name="doctor_specialist">Doctor, Specialist</string>
    <string name="select_date">Select Date</string>
    <string name="search">Search</string>
    <string name="all_cardiologist">All Carddiologist</string>
    <string name="see_all">See All</string>
    <string name="available_doctor">Available Doctor</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="categories">Categories</string>
    <string name="pediatrician">Pediatrician</string>
    <string name="neurosurgeon">Neurosurgeon</string>
    <string name="cardiologist">Cardiologist</string>
    <string name="psychiat">Psychiatin</string>
    <string name="video_call">Video Call</string>
    <string name="voice_call">Voice Call</string>
    <string name="message">Message</string>
    <string name="medicine_and_heart">Medicine &amp; Heart Spelist</string>
    <string name="good_health_clinic">Good Health Clinic, MBBS, FCPS</string>
    <string name="about_serena">About Serena</string>
    <string name="lorem">Lorem Ipsum is simply dummy test of the printing and typesetting industry. Lorem ipsum has been the industrys standard dummy text ever since the 1500s.</string>
    <string name="patients">Patients</string>
    <string name="experience">Experience</string>
    <string name="review">Review</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="home">Home</string>
    <string name="doctor">Doctor</string>
    <string name="menu">Menu</string>
    <string name="button_allow" tools:keep="@string/button_allow">Allow</string>
    <string name="button_deny" tools:keep="@string/button_deny">Deny</string>
    <string name="media">Media</string>
    <string name="docs">Docs</string>
    <string name="view_all">View all</string>
    <string name="invite_friends">Invite friends…</string>
    <string name="message_otp">We will send you a OTP message. Standard rates may apply.</string>
    <string name="content_privacy">Hello world. this is a text. superman, batman, iron man, bat man, wonder women.</string>
    <string name="hint_phone">Your phone number</string>
    <string name="confirm">Confirm</string>
    <string name="resend">Resend?</string>
    <string name="change_number">Change number?</string>
    <string name="verification_code">Verification Code</string>
    <string name="otp_sending">Sending otp</string>
    <string name="otp_verifying">Verifying otp</string>
    <string name="otp_verifying_msg">Verifying otp…</string>
    <string name="logging_in">Logging you in!</string>
    <string name="error_create_user">Something went wrong, unable to create user.</string>
    <string name="verification_cancel_title">Cancel verification</string>
    <string name="verification_cancel_message">Verification is in progress! do you want to cancel and go back?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="validation_req_country">Select country code!</string>
    <string name="validation_req_phone">Enter phone number!</string>
    <string name="validation_req_phone_valid">Enter a valid phone number</string>
    <string name="confirm_phone">One time password will be sent on this number! Continue with this number?</string>
    <string name="edit">Edit</string>
    <string name="hint_search">Search</string>
    <string name="tab_title_chat">Chats</string>
    <string name="tab_title_group">Groups</string>
    <string name="tab_title_call">Calls</string>
    <string name="invitation_share_title">Share using..</string>
    <string name="delete_chat_title">Delete chat</string>
    <string name="delete_chat_message">Continue deleting selected chats?</string>
    <string name="create_group">Create group</string>
    <string name="done">DONE</string>
    <string name="hint_group_name">Group name</string>
    <string name="group_info">Group info</string>
    <string name="short_description_of_group">Short description of group!</string>
    <string name="participants_0">Participants (0)</string>
    <string name="add_more">+ Add more</string>
    <string name="get_image_title">Get image from</string>
    <string name="get_image_camera">Camera</string>
    <string name="get_image_gallery">Gallery</string>
    <string name="validation_req_participant">No participants selected</string>
    <string name="validation_req_name">User name can\'t be empty</string>
    <string name="validation_req_description">Give this group a short description</string>
    <string name="err_upload_image">Unable to upload image.</string>
    <string name="group_created">Group created</string>
    <string name="error_request">Unable to process request at this time</string>
    <string name="back">Back</string>
    <string name="your_name">your name</string>
    <string name="share_app">Share app</string>
    <string name="rate_app">Rate app</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="validation_req_username">Name cannot be empty</string>
    <string name="validation_req_status">Status cannot be empty</string>
    <string name="updated">Updated!</string>
    <string name="image_updated">Profile image updated</string>
    <string name="type_your_message">Type your message</string>
    <string name="image">Image</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="contact">Contact</string>
    <string name="location">Location</string>
    <string name="document">Document</string>
    <string name="recording_cancelled">Recording cancelled</string>
    <string name="recodring">Recording…</string>
    <string name="message_copied">Messages copied</string>
    <string name="delete_msg_title">Delete messages</string>
    <string name="delete_msg_message">Continue deleting selected messages?</string>
    <string name="removed_from_group">You were removed from this group</string>
    <string name="just_moment">Just a moment..</string>
    <string name="voice_calling">Voice Calling</string>
    <string name="video_calling">Voice Calling</string>
    <string name="video_calling_in">Incoming video call</string>
    <string name="voice_calling_in">Incoming voice call</string>
    <string name="permission_mic">This application needs permission to use your microphone to function properly.</string>
    <string name="gave_miss">Gave you a miss call</string>
    <string name="err_upload_img">Unable to upload image.</string>
    <string name="phone_number">Phone number</string>
    <string name="status">Status</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="no_members">No new docs to add</string>
    <string name="add_member_title">Add doctor(s)</string>
    <string name="member_added">Doctors added</string>
    <string name="dial_permission">To dial number automatically for you we need this permission</string>
    <string name="remove_user_title">Remove Doctor</string>
    <string name="member_removed">Member removed</string>
    <string name="invite_friends_title">Invite Family/Doctors</string>
    <string name="invite_friends_message">Following contacts are missing out</string>
    <string name="invite_short">invite</string>
    <string name="file_not_found">File not found!\nFile is either Moved, Deleted or Renamed.</string>
    <string name="empty_text_chat_list">Your chats appear here\nStart chatting by selecting a Doctor.</string>
    <string name="empty_group_chat_list">Your Doctor chats appear here\nStart chatting by creating a group composed of multiple Docs.</string>
    <string name="empty_log_call_list">Your call logs appear here\nStart by selecting a user.</string>
    <string name="no_groups">You have no groups\nCreate a new group to begin with.</string>
    <string name="empty_contact_list_for_group">You don\'t have sufficient docs\nto be in a group</string>
    <string name="otp_sending_msg">One time password is being send to: \n %s</string>
    <string name="error_detail">Something went wrong%s</string>
    <string name="otp_sent">Please type the verification code sent to %s \n</string>
    <string name="invitation_title">%s Invitation</string>
    <string name="invitation_message">Hey, I found %s!, cool chatting application, come join me here.\nhttps://play.google.com/store/apps/details?id=%s</string>
    <string name="download_message">Download %s now</string>
    <string name="slide_cancel">%s (Slide left to cancel)</string>
    <string name="add_member_message">Are you sure you want to add %s in this group?</string>
    <string name="remove_user_message">Are you sure you want to remove %s from this group?</string>
    <string name="member_count">%d member(s)</string>
    <string name="participants_count">Participants (%d)</string>
    <string name="selected_count">%d selected</string>
    <string name="group_participants_error">Unable to load all group docs. Please refresh your users then check again.</string>
</resources>