<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/sign_in_up_bg"></ImageView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:padding="25dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/signin"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/appbar_text2_size"></TextView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/signin"
                        android:text="@string/already_have_an_account"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/small_text_1"></TextView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in1"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/txtSignIn"
                        android:textStyle="bold"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/small_text_1"></TextView>
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/user_name"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/appbar_text1_size"></TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginBottom="15dp"
                    android:padding="10dp"
                    android:hint="Shaharuzzaman Sourav"
                    android:textSize="@dimen/appbar_text1_size"
                    android:background="@drawable/edit_text_bg1">

                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/email"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/appbar_text1_size"></TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginBottom="15dp"
                    android:padding="10dp"
                    android:hint="shaharuzzaman23@gmail.com"
                    android:textSize="@dimen/appbar_text1_size"
                    android:background="@drawable/edit_text_bg1">

                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/phone"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/appbar_text1_size"></TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:textSize="@dimen/appbar_text1_size"
                    android:padding="10dp"
                    android:hint="+966 7896 4567 345"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/edit_text_bg1">

                </EditText>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/password"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/appbar_text1_size"></TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:background="@drawable/edit_text_bg1"
                    android:padding="10dp"
                    android:hint="**********"
                    android:textSize="@dimen/appbar_text1_size"
                    android:layout_marginBottom="15dp"
                    android:inputType="textWebPassword">

                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/appbar_text1_size"></TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:padding="10dp"
                    android:hint="**********"
                    android:textSize="@dimen/appbar_text1_size"
                    android:background="@drawable/edit_text_bg1"
                    android:layout_marginBottom="15dp"
                    android:inputType="textWebPassword">

                </EditText>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:textSize="@dimen/small_text_1"
                    android:id="@+id/btnSignUp"
                    android:background="@drawable/sign_in_bg_blue"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"></Button>


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>