<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/sign_in_up_bg"></ImageView>


        <LinearLayout
            android:layout_width="match_parent"
            android:padding="25dp"
            android:layout_marginTop="30dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/sign_in"
                android:textColor="@android:color/black"
                android:textSize="@dimen/appbar_text2_size"></TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/signin"
                    android:text="@string/dont_have_an_account"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/small_text_1"></TextView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up1"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/txtSignUp"
                    android:textStyle="bold"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/small_text_1"></TextView>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/email"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/appbar_text1_size"></TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:textSize="@dimen/appbar_text1_size"
                android:hint="shaharuzzaman23@gmail.com"
                android:padding="10dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text_bg1">

            </EditText>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/appbar_text1_size"></TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:textSize="@dimen/appbar_text1_size"
                android:padding="10dp"
                android:hint="********"
                android:background="@drawable/edit_text_bg1"
                android:layout_marginBottom="15dp"
                android:inputType="textWebPassword"></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:layout_marginBottom="15dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/appbar_text1_size"></TextView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/small_text_1"
                android:textAllCaps="false"
                android:id="@+id/btnSignIn"
                android:background="@drawable/sign_in_bg_blue"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"></Button>


        </LinearLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>