<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/setting_bg_color">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:layout_alignParentTop="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/navNotification"
                android:visibility="gone"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="Notification"
                    android:textSize="@dimen/appbar_text1_size"
                    android:textStyle="bold"
                    android:textColor="@android:color/black">

                </TextView>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/mainNav"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/appbartext"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/appbar_text1_size"
                        android:text="Find Your"
                        android:textColor="@android:color/black">

                    </TextView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Specialist"
                        android:textSize="@dimen/appbar_text2_size"
                        android:textColor="@android:color/black"
                        android:textStyle="bold">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="@dimen/appbar_img_size"
                        android:layout_height="@dimen/appbar_img_size"
                        android:id="@+id/searchAction"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="20dp"
                        android:gravity="right"
                        android:src="@drawable/serach"></ImageView>


                    <ImageView
                        android:layout_width="@dimen/appbar_img_size"
                        android:layout_height="@dimen/appbar_img_size"
                        android:id="@+id/chatAction"
                        android:layout_gravity="right|center_vertical"
                        android:src="@drawable/chat"></ImageView>

                </LinearLayout>


            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation_view_linear"
        android:background="@color/setting_bg_color" />


    <com.gauravk.bubblenavigation.BubbleNavigationLinearView
        android:id="@+id/bottom_navigation_view_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:elevation="8dp"
        android:gravity="fill_horizontal"
        android:orientation="horizontal"
        android:padding="12dp"
        app:bnc_mode="spread">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/bt_padding"
            app:bt_colorActive="@android:color/white"
            app:bt_colorInactive="@android:color/black"
            app:bt_icon="@drawable/ic_home"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/home"
            app:bnc_mode="spread"
            app:bt_titlePadding="5dp" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/bt_padding"
            app:bt_colorActive="@android:color/white"
            app:bt_colorInactive="@android:color/black"
            app:bt_icon="@drawable/stethoscope_21"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/doctor"
            app:bt_titlePadding="5dp" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/bt_padding"
            app:bt_colorActive="@android:color/white"
            app:bt_colorInactive="@android:color/black"
            app:bt_icon="@drawable/ic_notifications_none"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/notification"
            app:bt_titlePadding="5dp" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@android:color/white"
            app:bt_colorInactive="@android:color/black"
            app:bt_icon="@drawable/menu"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/menu"
            app:bt_titlePadding="5dp" />

        <!-- Add more child items here - max upto 5 -->

    </com.gauravk.bubblenavigation.BubbleNavigationLinearView>


</RelativeLayout>